# ShelterBridge

./: .gitignore  .prettierignore  AGENTS.md  DESIGN.md  LICENSE.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  release.yml
src/: App.css  App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/backup/: mod.rs
src-tauri/src/history/: mod.rs
src-tauri/src/save/: mod.rs
src/components/: BootSequence.css  BootSequence.tsx  Clock.tsx  HashChip.css  HashChip.tsx  PrimaryButton.css  PrimaryButton.tsx  TerminalFrame.css  TerminalFrame.tsx  TerminalPanel.css  TerminalPanel.tsx  Typewriter.tsx  VaultCard.css  VaultCard.tsx  icons.tsx
src/components/shared/: Modal.tsx  PrimaryButton.tsx  ScanLoader.tsx  StepGuide.tsx  Typewriter.tsx  icons.tsx  index.ts
src/components/vault/: SlotSelector.tsx  VaultCard.tsx  VaultRecap.tsx  VaultStats.tsx  index.ts
src/hooks/: usePrefersReducedMotion.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  fr.json
src/lib/: sound.ts  stamp.ts
src/screens/: HistoryScreen.tsx  InspectScreen.tsx  ReportScreen.tsx  TransferScreen.tsx
src/theme/: global.css  tokens.css
