[package]
name = "shelterbridge"
version = "0.1.0"
description = "Unofficial Fallout Shelter save backup and transfer tool"
authors = ["Tom Boullay"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "shelterbridge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22.1"
aes = "0.9.1"
cbc = "0.2.1"
pbkdf2 = "0.13.0"
hmac = "0.13.0"
sha1 = "0.11.0"
sha2 = "0.11.0"

